# automatic-coursework-classroom

./: .gitignore  Assignment.py  README.md  create_assigment.py  create_course.py  jadwal.csv  main.ipynb  pyproject.toml
